syntax = "proto3";

option java_multiple_files = true;
option java_package = "tech.qdrant.grpc";
option java_outer_classname = "QdrantProto";

package qdrant;

service Collections {
  rpc Get (GetCollectionsRequest) returns (GetCollectionsResponse) {}
  rpc Create (CreateCollection) returns (CollectionOperationResponse) {}
  rpc Update (UpdateCollection) returns (CollectionOperationResponse) {}
  rpc Delete (DeleteCollection) returns (CollectionOperationResponse) {}
}

message GetCollectionsRequest {
}

message CollectionDescription {
  string name = 1;
}

message GetCollectionsResponse {
  repeated CollectionDescription collections = 1;
  double time = 2;
}

enum Distance {
  Cosine = 0;
  Euclid = 1;
  Dot = 2;
}

message HnswConfigDiff {
  optional uint64 m = 1;
  optional uint64 ef_construct = 2;
  optional uint64 full_scan_threshold = 3;
}

message WalConfigDiff {
  optional uint64 wal_capacity_mb = 1;
  optional uint64 wal_segments_ahead = 2;
}

message OptimizersConfigDiff {
  optional double deleted_threshold = 1;
  optional uint64 vacuum_min_vector_number = 2;
  optional uint64 max_segment_number = 3;
  optional uint64 memmap_threshold = 4;
  optional uint64 indexing_threshold = 5;
  optional uint64 payload_indexing_threshold = 6;
  optional uint64 flush_interval_sec = 7;
  optional uint64 max_optimization_threads = 8;
}

message CreateCollection {
  string name = 1;
  uint64 vector_size = 2;
  Distance distance = 3;
  optional HnswConfigDiff hnsw_config = 4;
  optional WalConfigDiff wal_config = 5;
  optional OptimizersConfigDiff optimizers_config = 6;
}

message UpdateCollection {
  string name = 1;
  optional OptimizersConfigDiff optimizers_config = 2;
}

message DeleteCollection {
  string name = 1;
}

message CollectionOperationResponse {
  optional bool result = 1;
  optional string error = 2;
  double time = 3;
}